--- a/pizzas/templates/pizzas/index.html
+++ b/pizzas/templates/pizzas/index.html
@@ -1,8 +1,9 @@
 {% extends "pizzas/base.html" %}
 
+{% block page_header %}
+    <div class="jumbotron">
+        <h1 class="display-3">Mckenna's Pizzeria</h1>
+        <p class="lead">Mckenna's Pizzeria has the tasiest pizza in TX!</p>
+    </div>
+{% endblock page_header %}
 
-{% block content %}
-<p>Mckenna's Pizzeria has the tastiest pizza in TX!
-</p>
-
-{% endblock content %}
