--- a/pizzas/templates/pizzas/pizza.html
+++ b/pizzas/templates/pizzas/pizza.html
@@ -1,34 +1,43 @@
 {% extends "pizzas/base.html" %}
 
+{% block page_header %}
+ <h3>{{ pizza }}</h3>
+{% endblock page_header %}
 
 {% block content %}
-<p>
-    Pizza: {{ pizza }}
-</p>
 
 <ul>
     {% for t in toppings %}
-    <li>
-        <p> {{ t.topping_name }}</p>
-        <p> {{ t.date_added }}</p>
-    </li>
+    <div class="card mb-3">
+        <h4 class="card-header">
+            {{ t.topping_name }}
+        </h4>
+        <div class="card-body">
+            {{ t.topping_name|linebreaks }}
+        </div>
+    </div>
     {% empty %}
-    <li> There are no toppings for this pizza yet.</li>
+    <p>There are no toppings for this pizza yet.</p>
     {% endfor %}
-</ul>
 
+<ul>
+
+<a href="{% url 'pizzas:new_comment' pizza.id %}">Add new comment</a>
 
 <ul>
     {% for c in comments %}
-    <li>
-        <p> {{ c.comment_name }}</p>
-        <p> {{ c.date_added }}</p>
-    </li>
+    <div class="card mb-3">
+        <h4 class="card-header">
+            {{ c.comment_name }}
+        </h4>
+        <div class="card-body">
+            {{ c.comment_name|linebreaks }}
+        </div>
+    </div>
     {% empty %}
-    <li> There are no comments for this pizza yet.</li>
+    <p>There are no comments for this pizza yet.</p>
     {% endfor %}
 </ul>
 
-<p><a href="{% url 'pizzas:new_comment' pizza.id %}">Add new comment</a></p>
 
 {% endblock content %}
