--- a/pizzas/templates/pizzas/pizzas.html
+++ b/pizzas/templates/pizzas/pizzas.html
@@ -1,21 +1,23 @@
 {% extends "pizzas/base.html" %}
 
+{% block page_header %}
+ <h1>Pizzas</h1>
+{% endblock page_header %}
 
 {% block content %}
-
-<p> Pizzas </p>
-
-<ul>
-    {% for p in pizzas %}
-
-    <li>
-        <a href="{% url 'pizzas:pizza' p.id %}">{{ p.pizza_name }} </a>
-    </li>
+ <ul>
+    {% for pizza in pizzas %}
+        <li><h3>
+            <a href="{% url 'pizzas:pizza' pizza.id %}">{{ pizza }}</a>
+        </h3></li>
     {% empty %}
-    <li>No pizzas have been added yet.</li>
+        <li><h3>No pizzas have been added yet.</h3></li>
     {% endfor %}
-</ul>
-
-<a href="{% url 'pizzas:new_comment' %}">Add a new comment</a>
+ </ul>
+ 
 
 {% endblock content %}
+
+
+
+
