--- a/pizzas/templates/pizzas/base.html
+++ b/pizzas/templates/pizzas/base.html
@@ -24,8 +24,11 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'pizzas:pizzas'%}">
-                    Pizzas</a></li>
+                    Pizzas</a>
+            </li>
         </ul>
+    </div>
+ </nav>
 
     <main role="main" class="container">
         <div class="pb-2 mb-2 border-bottom">
